@@ -13,6 +13,18 @@ folders of account instances that get added. Using it as a model for a
 #GtkTreeView will display the account name as parent row with the
 account-folders as the child rows.
 </para>
+<para>
+It's very important to unreference the instance you will get when doing something like this:
+<programlisting>
+TnyFolderface *folder;
+gtk_tree_model_get (model, &iter,
+  TNY_ACCOUNT_TREE_MODEL_INSTANCE_COLUMN,
+  &folder, -1);
+/* use folder */
+g_object_unref (G_OBJECT(folder));
+</programlisting>
+The column is indeed a G_TYPE_OBJECT column and getting it from the #GtkTreeModel will indeed add a reference.
+</para>
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
