@@ -10,7 +10,18 @@ This #GtkTreeModel implementation will attempt to aggressively uncache
 #TnyHeaderIface instances once their corresponding row in the 
 #GtkTreeView become invisible. This reduces memory usage.
 </para>
-
+<para>
+It's very important to unreference the instance you will get when doing something like this:
+<programlisting>
+TnyHeaderIface *header;
+gtk_tree_model_get (model, &iter, 
+  TNY_HEADER_LIST_MODEL_INSTANCE_COLUMN, 
+  &header, -1);
+/* use header */
+g_object_unref (G_OBJECT(header));
+</programlisting>
+The column is indeed a G_TYPE_OBJECT column and getting it from the #GtkTreeModel will indeed add a reference.
+</para>
 <!-- ##### SECTION See_Also ##### -->
 <para>
 #TnyMsgViewIface
