@@ -45,7 +45,7 @@ struct _TnyMsgViewIfaceClass
 
 	void (*set_msg_func)           (TnyMsgViewIface *self, TnyMsgIface *msg);
 	void (*set_save_strategy_func) (TnyMsgViewIface *self, TnySaveStrategyIface *strategy);
-	void (*set_unavailable_func)   (TnyMsgViewIface *self, TnyHeaderIface *header);
+	void (*set_unavailable_func)   (TnyMsgViewIface *self);
 	void (*clear_func)             (TnyMsgViewIface *self);
     
 };
@@ -54,7 +54,7 @@ GType tny_msg_view_iface_get_type          (void);
 
 void  tny_msg_view_iface_set_msg           (TnyMsgViewIface *self, TnyMsgIface *msg);
 void  tny_msg_view_iface_set_save_strategy (TnyMsgViewIface *self, TnySaveStrategyIface *strategy);
-void  tny_msg_view_iface_set_unavailable   (TnyMsgViewIface *self, TnyHeaderIface *header);
+void  tny_msg_view_iface_set_unavailable   (TnyMsgViewIface *self);
 void  tny_msg_view_iface_clear             (TnyMsgViewIface *self);
 
 
