@@ -2,7 +2,10 @@
 
 	*  Added unit tests for TnyFolderStoreQuery
 	*  Added unit tests for TnyMsgIface
-	
+	*  Fixed some ugly memory leaks (reference count problems)
+
+	* This was a major API change
+
 2006-08-27  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Bugfix when switching offline and online and again getting a
